welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:7: error: not found: type color
def growFlowers (c:color)
                   ^FlowerPot:9: error: not found: value color
setCouleurBrosse(color.yellow)
                 ^FlowerPot:11: error: not found: value color
color;
^